<resources>
    <string name="app_name">True Health</string>
    <string name="label_view_https_chiiwii" translatable="false">Chiiwii</string>
    <string name="label_view_chiiwii_home" translatable="false">Chiiwii</string>
    <string name="powered_by_chiiwii">Powered by Chiiwii</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_LoginOTP">OTP Login</string>
    <string name="title_activity_LoginPIN">PIN Login</string>
    <string name="title_activity_detail_doctor">DetailDoctorActivity</string>
    <string name="message_update_version">Found True Health new version\n Please update True Health on Play Store</string>
    <string name="button_update_app">Update</string>
    <string name="button_update_cancel">Not now</string>
    <string name="double_back_pressed">Press again for exit</string>
    <string name="error_password">This password is too short</string>
    <string name="error_password_confirmed">Passwords do not match</string>
    <string name="error_invalid_username">username is too short</string>
    <string name="error_invalid_email">Please use the correct email format</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_otp">6–digit OTP number</string>
    <string name="error_invalid_mobile">10–digit phone number</string>
    <string name="error_invalid_discount">Coupon code</string>
    <string name="error_invalid_payment_code">Transaction code</string>
    <string name="error_invalid_telephone">Please use a valid phone number</string>
    <string name="error_invalid_payment">Please payment check again</string>
    <string name="splash_title">Telehealth</string>
    <string name="error_invalid_card_number">16–digit Card number</string>
    <string name="error_invalid_card_name">name is too short</string>
    <string name="error_invalid_card_expired">4–digit expired date</string>
    <string name="error_invalid_card_expired_month">2–digit expired month</string>
    <string name="error_invalid_card_expired_year">4–digit expired year</string>
    <string name="error_invalid_card_cvv">3–digit security code</string>
    <string name="error_message">Error Message : </string>
    <string name="error_message_button_ok">OK</string>
    <string name="error_message_button_cancel">Cancel</string>
    <string name="error_message_token_expired">Token expired\nPlease Login again,</string>
    <string name="ship_address_title_activity">Shipping Information</string>
    <string name="ship_address_title">Shipping Address</string>
    <string name="error_invalid_shipping_name">Please input your name</string>
    <string name="error_invalid_shipping_phone">Please input your mobile number</string>
    <string name="error_invalid_shipping_address">Please input shipping address</string>
    <string name="shipping_title_bar">Shipping Status</string>
    <string name="shipping_title_invoice">Invoice Number</string>
    <string name="shipping_title_staus">Shipping Status</string>
    <string name="shipping_title_remark">Estimate Delivery Time is 2:30 hours</string>
    <string name="shipping_button">Back to Appointment</string>
    <string name="shipping_button_address">Select Location</string>
    <string name="callingbar_title">ถึงเวลาพบแพทย์แล้ว!</string>
    <string name="callingbar_hello">สวัสดีค่ะคุณ guest</string>
    <string name="callingbar_detail">ถึงเวลา วีดีโอคอล กับ\n พญ.ชีวีชีวา แล้วค่ะ</string>
    <string name="callingbar_button">เข้าห้องสนทนา</string>
    <string name="consult_chat">Chat</string>
    <string name="consult_voice">Voice</string>
    <string name="consult_video">VDO</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_calendar">Calendar</string>
    <string name="tab_profile">Profile</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit">Edit</string>
    <string name="button_finish">Finish</string>
    <string name="button_logout">Logout</string>
    <string name="button_start">Start</string>
    <string name="button_start_application">How may True Health help you today?</string>
    <string name="button_save">Save</string>
    <string name="button_cancel_appointments">ยกเลิกการนัดหมาย</string>
    <string name="button_start_conversation">เริ่มการสนทนา</string>
    <string name="button_login_with_facebook">เข้าสู่ระบบด้วย Facebook</string>
    <string name="button_edit_profile">แก้ไขข้อมูลส่วนตัว</string>
    <string name="button_view_appointment">Appointment</string>
    <string name="button_done">Done</string>
    <string name="button_dialog_done">Done</string>
    <string name="button_send">Send</string>
    <string name="button_next">Next</string>
    <string name="button_empty_retry">Retry</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="money_baht">THB</string>
    <string name="money_baht_string">%s THB</string>
    <string name="money_baht_int">%d THB</string>
    <string name="money_baht_B_int">%d ฿</string>
    <string name="money_baht_B">฿</string>
    <string name="money_baht_B_int_per_minute">%d บาท/ 15 นาที</string>
    <string name="money_baht_double">%1$,.2f บาท</string>
    <string name="money_double">%1$,.2f</string>
    <string name="time_n_str">%s m.</string>
    <string name="time_minute">mins</string>
    <string name="time_fifteen_minute">15 mins</string>
    <string name="term_and_condition_application">*Information received from True Health application is only for health consultation and cannot
        be used to replace the actual diagnosis or treatment from your physician.
        All consideration and decision are made at your own risks.
        True Health application cannot be used in case of emergency or life threatening conditions.</string>
    <string name="dialog_default_title">แจ้งเตือน</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_need_button">ต้องการ</string>
    <string name="dialog_un_need_button">ไม่ต้องการ</string>
    <string name="dialog_confirm_meeting">ยืนยันการนัดหมาย</string>
    <string name="dialog_cancel_meeting">ยกเลิกการนัดหมาย</string>
    <string name="dialog_reason_to_cancel_meet">เหตุผลที่ต้องการยกเลิก</string>
    <string name="dialog_hint_cancel_meet">(กรุณากรอกเหตุผลเพิ่มเติม..)</string>
    <string name="dialog_transaction_complete">การทำรายการเสร็จสิ้น</string>
    <string name="dialog_transaction_complete_desc">ระบบจะทำการบันทึกรายการชำระเงินของท่านลงในอัลบัมภาพโดยอัตโนมัติ และท่านสามารถจัดการการนัดหมายของท่านได้ที่ "ประวัติการนัดพบแพทย์"</string>
    <string name="dialog_choose_time_appointments">เลือกเวลาพบหมอ</string>
    <string name="dialog_select_language">เลือกภาษา</string>
    <string name="dialog_thai_language">ภาษาไทย</string>
    <string name="dialog_english_language">English</string>
    <string name="dialog_cancel_appointments">สรุปค่าใช้จ่ายในการยกเลิก</string>
    <string name="dialog_condition_for_refund">เงื่อนไขการคืนเงิน</string>
    <string name="dialog_number_refund">จำนวนที่ได้คืน</string>
    <string name="dialog_term_and_condition_title">ข้อตกลงการใช้งาน</string>
    <string name="dialog_select_tome_to_alert">เลือกเวลาแจ้งเตือนก่อนเวลา</string>
    <string name="dialog_forgot_password_title">คุณลืมรหัสผ่านหรือไม่?</string>
    <string name="dialog_forgot_password_desc">กรุณากรอกอีเมล์ของคุณด้านล่างและเราจะส่งลิงก์เพื่อรีเซ็ตรหัสผ่านของคุณ</string>
    <string name="dialog_cancel_appointment_doctor_title">ยกเลิกนัด</string>
    <string name="dialog_cancel_appointment_doctor_desc">คุณต้องการยกเลิกนัดใช่หรือไม่ ?</string>
    <string name="dialog_login">เข้าสู่ระบบ</string>
    <string name="dialog_change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="dialog_old_password">รหัสผ่านเก่า</string>
    <string name="dialog_new_password">รหัสผ่านใหม่</string>
    <string name="dialog_confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="dialog_choose_specialty">เลือกสาขาเฉพาะทาง</string>
    <string name="dialog_choose_sub_specialty">เลือกสาขาเฉพาะทางต่อยอด</string>
    <string name="dialog_logout">ออกจากระบบ?</string>
    <string name="dialog_exit_application">Do you want exit application?</string>
    <string name="dialog_exit_conversation">คุณต้องการออกจากการสนทนา?</string>
    <string name="dialog_confirm_delete_picture">คุณต้องการลบรูปภาพใช่หรือไม่</string>
    <string name="dialog_confirm_delete">คุณต้องการลบใช่หรือไม่</string>
    <string name="dialog_delete_current_day">ลบเฉพาะวันนี้</string>
    <string name="dialog_delete_every_week">ลบทุกสัปดาห์</string>
    <string name="dialog_delete_slot">การปิดตารางทำงานจะไม่มีผลยกเลิกการนัดหมายที่เกิดขึ้นแล้ว</string>
    <string name="dialog_please_selected_date">กรุณาเลือกวันที่</string>
    <string name="dialog_please_selected_time">กรุณาเลือกเวลาพบหมอ</string>
    <string name="dialog_please_selected_contact">กรุณาเลือกช่องทางการปรึกษา</string>
    <string name="dialog_selected_contact">เลือกช่องทางการปรึกษา</string>
    <string name="dialog_doctor_calendar_title">Select Date</string>
    <string name="dialog_doctor_no_slot">Time not available</string>
    <string name="dialog_otp_title">Verification code</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_renew">Request OTP</string>
    <string name="dialog_send_title">Send to address</string>
    <string name="setting_profile_login">User Login</string>
    <string name="setting_profile_title_password">Set password</string>
    <string name="setting_profile_password">New password</string>
    <string name="setting_profile_password_confirm">Confirm new password</string>
    <string name="setting_profile_password_hint">password…</string>
    <string name="setting_profile_password_confirm_hint">confirm password…</string>
    <string name="setting_profile_name">Display name</string>
    <string name="setting_profile_name_hint">Display name…</string>
    <string name="setting_profile_application">Setting</string>
    <string name="setting_account_setting">ACCOUNT SETTING</string>
    <string name="setting_profile">Profile</string>
    <string name="setting_change_password">Change Password</string>
    <string name="setting_change_pin">Change PIN</string>
    <string name="setting_payment_method">Payment method</string>
    <string name="setting_langauge">LANGUAGE</string>
    <string name="setting_lang_th">ภาษาไทย</string>
    <string name="setting_lang_en">English</string>
    <string name="setting_policies">POLICIES</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_terms_and_condition">Terms and Conditions</string>
    <string name="setting_faq_and_manuals">FAQ and Manual</string>
    <string name="setting_faq">FAQ</string>
    <string name="setting_manuals">Manual</string>
    <string name="setting_logout">Sign out</string>
    <string name="rating_title">Rating</string>
    <string name="rating_suggest_hint">Recommendation…</string>
    <string name="title_hint">Enter topics</string>
    <string name="date_survey_hint">diagnose date</string>
    <string name="explain_hint">description</string>
    <string name="name_inspector_place_hint">doctor name/diagnose place</string>
    <string name="title">Topics</string>
    <string name="date_survey">Diagnose date</string>
    <string name="explain">Description</string>
    <string name="name_inspector_place">Doctor name/diagnose place</string>
    <string name="insurance_setting">Insurance Setting</string>
    <string name="payment_setting">PAYMENT SETTING</string>
</resources>